// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppVersion dispatches the proper actions calculates path correctly on the client too 1`] = `
Object {
  "activityLastSeen": 0,
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "/such/path",
  "selectedTab": "details",
  "versionId": undefined,
}
`;

exports[`AppVersion dispatches the proper actions dispatches fetchAppVersionEvents 1`] = `
Object {
  "activityLastSeen": 0,
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "some/path",
  "selectedTab": "activity",
  "versionId": undefined,
}
`;

exports[`AppVersion dispatches the proper actions dispatches fetchTestDevices 1`] = `
Object {
  "activityLastSeen": 0,
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "some/path",
  "selectedTab": "devices",
  "versionId": undefined,
}
`;

exports[`AppVersion displays a new activity marker badge 1`] = `
<Fragment>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x12"
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=details"
        >
          <a>
            <Tab
              active={true}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Details
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/devices"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=devices"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Devices
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/qa"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=qa"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Qa
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/activity"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=activity"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <Dot
                  backgroundColor="red-3"
                  size=".5rem"
                />
                <span
                  className="tabAnchor"
                >
                  Activity
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={960}
    >
      <Connect(AppVersionDetails)
        appSlug="some-app"
        versionId="a-version-id"
      />
    </Flex>
  </Flex>
  <Flex
    className="footerWrapper"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the activity tab correctly 1`] = `
<Fragment>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x12"
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=details"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Details
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/devices"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=devices"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Devices
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/qa"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=qa"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Qa
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/activity"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=activity"
        >
          <a>
            <Tab
              active={true}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Activity
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={960}
    >
      <Connect(Activity) />
    </Flex>
  </Flex>
  <Flex
    className="footerWrapper"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the details tab correctly 1`] = `
<Fragment>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x12"
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=details"
        >
          <a>
            <Tab
              active={true}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Details
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/devices"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=devices"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Devices
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/qa"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=qa"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Qa
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/activity"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=activity"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Activity
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={960}
    >
      <Connect(AppVersionDetails)
        appSlug="some-app"
        versionId="a-version-id"
      />
    </Flex>
  </Flex>
  <Flex
    className="footerWrapper"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the devices tab correctly 1`] = `
<Fragment>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x12"
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=details"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Details
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/devices"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=devices"
        >
          <a>
            <Tab
              active={true}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Devices
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/qa"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=qa"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Qa
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/activity"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=activity"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Activity
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={960}
    >
      <Connect(AppVersionDevices) />
    </Flex>
  </Flex>
  <Flex
    className="footerWrapper"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the other tabs correctly 1`] = `
<Fragment>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x12"
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=details"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Details
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/devices"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=devices"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Devices
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/qa"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=qa"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Qa
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/activity"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=activity"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Activity
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={960}
    >
      <h1>
        whateever
      </h1>
    </Flex>
  </Flex>
  <Flex
    className="footerWrapper"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the qa tab correctly 1`] = `
<Fragment>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={960}
    >
      <Tabs
        gap="x12"
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=details"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Details
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/devices"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=devices"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Devices
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/qa"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=qa"
        >
          <a>
            <Tab
              active={true}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Qa
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
        <Link
          as="some/path/activity"
          href="/version?appSlug=some-app&versionId=a-version-id&selectedTab=activity"
        >
          <a>
            <Tab
              active={false}
              paddingHorizontal="x2"
            >
              <Flex
                alignChildren="middle"
                direction="horizontal"
                gap="x1"
              >
                <span
                  className="tabAnchor"
                >
                  Activity
                </span>
              </Flex>
            </Tab>
          </a>
        </Link>
      </Tabs>
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={960}
    >
      <_default />
    </Flex>
  </Flex>
  <Flex
    className="footerWrapper"
  >
    <AddonFooter
      addonName="Ship"
    />
  </Flex>
</Fragment>
`;
